# ollama-wrapper-mcp

./: .gitignore  README.md  core_design.md  main.py  pyproject.toml  security.py  server.py  test_changelog.md
.agents/: AGENTS.md
.agents/skills/design-compliance/: SKILL.md
.agents/skills/fastmcp-python-sdk/: SKILL.md
.agents/skills/git-commits/: SKILL.md
.agents/skills/implementation-planning/: SKILL.md
.agents/skills/mcp-protocol-specs/: SKILL.md
.agents/skills/ollama-mcp/: SKILL.md
.agents/skills/plan-execution/: SKILL.md
.agents/skills/skill-creation/: SKILL.md
examples/: minimal_client.py
src/ollama_wrapper/: config.py  prompts.py  security.py  server.py  tools_helper.py
tests/: test_config.py  test_security.py  test_server.py
